--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 APP_NAME=testservice
 DOMAIN_NAME=dev.neo.onl
-CERTRESOLVER=namecheap
+CERTRESOLVER=hetzner
 PASSWORD=1234Help*
 HASHED_PASSWORD='$apr1$Z8McNnPN$M47rUxtsRukExS7F/WwqV1'
