add dedicated auth rule

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,20 @@ services:
       - "traefik.http.services.dev-${APP_NAME}-traefiks.loadbalancer.server.port=8080"
       - "traefik.http.services.dev-${APP_NAME}-traefiks.loadbalancer.server.scheme=http"
         #- "traefik.http.routers.dev-${APP_NAME}.rule=Host(`mail.${APP_NAME}.dev.neo.onl`, `auth.${APP_NAME}.dev.neo.onl`, `code.${APP_NAME}.dev.neo.onl`, `port-5139.${APP_NAME}.dev.neo.onl`)"
+
+      - "traefik.http.routers.dev-${APP_NAME}-auth.rule=Host(`auth.${APP_NAME}.${DOMAIN_NAME}`)"
+      - "traefik.http.routers.dev-${APP_NAME}-auth.entrypoints=web"
+      - "traefik.http.routers.dev-${APP_NAME}.middlewares=dev-${APP_NAME}-auth-mw"
+      - "traefik.http.middlewares.dev-${APP_NAME}-auth-mw.redirectscheme.scheme=https"
+        #- "traefik.http.routers.dev-${APP_NAME}-s.rule=Host(`mail.${APP_NAME}.dev.neo.onl`, `auth.${APP_NAME}.dev.neo.onl`, `code.${APP_NAME}.dev.neo.onl`, `port-5139.${APP_NAME}.dev.neo.onl`)"
+      - "traefik.http.routers.dev-${APP_NAME}-auths.rule=HostRegexp(`auth.code.${APP_NAME}.${DOMAIN_NAME}`)"
+      - "traefik.http.routers.dev-${APP_NAME}-auths.entrypoints=websecure"
+      - "traefik.http.routers.dev-${APP_NAME}-auths.tls=true"
+      - "traefik.http.routers.dev-${APP_NAME}-auths.tls.certresolver=${CERTRESOLVER}"
+      - "traefik.http.routers.dev-${APP_NAME}-auths.tls.domains[0].main=auth.${APP_NAME}.${DOMAIN_NAME}"
+      - "traefik.http.routers.dev-${APP_NAME}-auths.service=dev-${APP_NAME}-auths"
+      - "traefik.http.services.dev-${APP_NAME}-auths.loadbalancer.server.port=443"
+      - "traefik.http.services.dev-${APP_NAME}-auths.loadbalancer.server.scheme=https"
       - "traefik.http.routers.dev-${APP_NAME}.rule=HostRegexp(`{subdomain:[a-zA-Z0-9]+}.${APP_NAME}.${DOMAIN_NAME}`, `{port:[0-9]+}.code.${APP_NAME}.${DOMAIN_NAME}`)"
       - "traefik.http.routers.dev-${APP_NAME}.entrypoints=web"
       - "traefik.http.routers.dev-${APP_NAME}.middlewares=dev-${APP_NAME}-mw"
